--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "react-tiny-popover": "^8.1.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
