--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "react-tiny-popover": "^8.1.6",
+    "styled-components": "^6.1.19",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.20"
   }
 }
