--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
+    "react-icons": "4.10.1",
     "react-scripts": "5.0.1",
     "react-tiny-popover": "^8.1.6",
     "styled-components": "^6.1.19",
