--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
-    "jest": "^30.0.4",
-    "ts-jest": "^29.4.0"
+    "axios-mock-adapter": "^2.1.0",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.1"
   }
 }
